Fix horizontal scroll in modules containing a table

--- a/assets/css/components/Table.scss
+++ b/assets/css/components/Table.scss
@@ -234,6 +234,7 @@
     border-radius: 3px;
     max-height: 26rem;
     overflow: auto;
+    overflow-x: hidden;
 
     .react-grid-Main{
       outline:0px;
